--- a/app/src/main/res/layout/activity_main_grid.xml
+++ b/app/src/main/res/layout/activity_main_grid.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnSpan="2"
-        android:text="Look at my GUI"
+        android:text="@string/GUI"
         android:textSize="30dp" />
 
     <Button
@@ -43,7 +43,7 @@
         android:layout_row="1"
         android:layout_column="1"
         android:gravity="fill"
-        android:text="Check this Out" />
+        android:text="@string/check" />
 
     <Switch
         android:id="@+id/switch1"
@@ -52,7 +52,7 @@
         android:layout_row="2"
         android:layout_column="1"
         android:gravity="fill"
-        android:text="Switch on/off" />
+        android:text="@string/Switch" />
 
     <EditText
         android:id="@+id/textView2"
@@ -63,7 +63,7 @@
         android:layout_columnSpan="2"
 
         android:background="#FFFFFF"
-        android:hint="Type here"
+        android:text="@string/hint"
         android:inputType="textPersonName" />
 
 </GridLayout>
