--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -71,5 +71,14 @@
 
         android:textSize="15sp" />
 
+    <Button
+        android:id="@+id/GoToChatBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:text="@string/GoToChatText"
+        android:layout_below="@+id/ImagePictureTextView"/>
+
 
 </LinearLayout>
