--- a/app/src/main/res/layout/activity_main_send.xml
+++ b/app/src/main/res/layout/activity_main_send.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingBottom="4dp"
-        android:text="Phuc"/>
+        android:text="Pragnesh"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,6 +36,6 @@
         android:paddingHorizontal="16dp"
         android:elevation="2dp"
         android:textSize="18dp"
-        android:text="How are you doing? This is a long message that should probably wrap."
+        android:text="How are you ?......................"
         />
 </RelativeLayout>
